@@ -10,7 +10,8 @@ WORKDIR /app
 COPY pom.xml /app/
 COPY src /app/src/
 
-RUN mvn package
+# Run Maven package with JavaFX plugin
+RUN mvn -DskipTests=true package javafx:compile javafx:run
 
-# Set system property for JavaFX rendering
-CMD ["java", "-Dprism.order=sw", "--module-path", "/usr/share/openjfx/lib", "--add-modules", "javafx.controls,javafx.fxml", "-jar", "target/cinemabuddy.jar"]
+CMD ["java", "-jar", "target/cinemabuddy.jar"]
+
